Fix cart icon alignment and make orders pagination clickable

--- a/navbar.css
+++ b/navbar.css
@@ -113,6 +113,11 @@ body {
 
 #navCart i {
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
 }
 
 /* User dropdown styling */
